--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,11 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+/cypress/screenshots
+/cypress/downloads
+/cypress/videos
+/cypress/reports
+/cypress/results
 
 # System files
 .DS_Store
