--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -11,3 +11,5 @@ jobs:
       - uses: cypress-io/github-action@v3
         with:
           browser: chrome
+          build: npm run build
+          start: npm start
