Add cypress record key to gha

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -13,3 +13,6 @@ jobs:
           browser: chrome
           build: npm run build
           start: npm start
+        env:
+          # for recording test results and videos to Cypress Dashboard
+          CYPRESS_RECORD_KEY: ${{secrets.CYPRESS_RECORD_KEY}}
