--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "cypress": "cypress run --record --browser chrome"
+    "cypress": "cypress run --browser chrome"
   },
   "private": true,
   "dependencies": {
