--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,6 +1,24 @@
 name: E2E in custom container
 on: [push]
 jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Node
+        uses: actions/setup-node@v2.4.1
+        with:
+          node-version: "14"
+          cache: npm
+      - name: Pull down dependencies
+        run: npm install
+      - name: Build
+        run: npm run build:init && npm run build
+        
   cypress-run:
     runs-on: ubuntu-20.04
     # Cypress Docker image with Chrome v78
