--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,12 +8,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Node
-        uses: actions/setup-node@v2.4.1
+        uses: actions/setup-node@v4
         with:
-          node-version: "14"
+          node-version: "18"
           cache: npm
       - name: Pull down dependencies
         run: npm install
@@ -25,15 +25,12 @@ jobs:
     runs-on: ubuntu-20.04
     # Cypress Docker image with Chrome v78
     # and Firefox v70 pre-installed
-    container: cypress/browsers:node14.17.0-chrome91-ff89
+    container: cypress/browsers:node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
     steps:
-      - uses: actions/checkout@v2
-      - uses: cypress-io/github-action@v3
+      - uses: actions/checkout@v4
+      - uses: cypress-io/github-action@v6
         with:
-          record: true
           browser: chrome
           build: npm run build
           start: npm start
-        env:
-          # for recording test results and videos to Cypress Dashboard
-          CYPRESS_RECORD_KEY: ${{secrets.CYPRESS_RECORD_KEY}}
+
