--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -33,4 +33,6 @@ jobs:
           browser: chrome
           build: npm run build
           start: npm start
+      - name: Generate multi report
+        run: echo 'complete!'
 
